overflow fix

--- a/src/components/components.module.css
+++ b/src/components/components.module.css
@@ -113,7 +113,6 @@ p.errorMsg {
 
  .gameInfo {
     display: flex;
-    overflow: hidden;
     flex-direction: column;
     align-items: center;
     padding: 0.2rem 0 0 0;
